adding low cost service