@@ -15,29 +15,29 @@ dependencies {
     compile 'commons-codec:commons-codec:1.9'
     compile 'org.apache.commons:commons-lang3:3.3.2'
     compile 'org.apache.commons:commons-math3:3.3'
-    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.google.code.gson:gson:2.3'
     compile 'com.google.guava:guava:18.0'
     compile 'com.google.code.findbugs:jsr305:2.0.3'
-    compile 'joda-time:joda-time:2.3'
-    compile 'org.mockito:mockito-core:1.9.5'
+    compile 'joda-time:joda-time:2.5'
+    compile 'org.mockito:mockito-core:1.10.8'
     compile 'com.boundary:high-scale-lib:1.0.6'
 
     compile 'junit:junit:4.11'
     runtime 'postgresql:postgresql:9.1-901.jdbc4'
 
-    //logback
-    compile 'ch.qos.logback:logback-classic:1.0.13'
+    //slf4J logging
+    ['slf4j-api'].each {
+        compile("org.slf4j:${it}:1.7.7")
+    }
 
     //slf4J logging
-    ['slf4j-api','jcl-over-slf4j','log4j-over-slf4j'].each {
-        compile("org.slf4j:${it}:1.7.5")
+    ['jcl-over-slf4j','log4j-over-slf4j','slf4j-jdk14'].each {
+        runtime("org.slf4j:${it}:1.7.7")
     }
-    //Groovy need by logback for configuration
-    runtime 'org.codehaus.groovy:groovy-all:1.8.9@jar'
 
     // Tomcat 8 for embedded container
-    compile 'org.apache.tomcat.embed:tomcat-embed-core:8.0.8'
-    compile 'org.apache.tomcat.embed:tomcat-embed-logging-juli:8.0.8'
+    compile 'org.apache.tomcat.embed:tomcat-embed-core:8.0.14'
+    compile 'org.apache.tomcat.embed:tomcat-embed-logging-juli:8.0.14'
 
 }
 
@@ -62,37 +62,28 @@ def defineRuntimeConfig(name, runClass, function, consolePort, debugPort) {
     config.name = name
     config.runClass = runClass
 
-    config.hotspotArgs = ['-server', '-XX:CompileThreshold=1000']
+    config.hotspotArgs = ['-server']
     config.maxHeapSize = '512m'
-    config.memArgs = ['-Xms64m', '-XX:MaxPermSize=128m', '-XX:NewRatio=4']
-    config.gcArgs = ['-XX:+ScavengeBeforeFullGC', '-XX:+UseConcMarkSweepGC', '-XX:+UseParNewGC', '-XX:CMSInitiatingOccupancyFraction=70']
-    config.threadArgs = ['-XX:+UseThreadPriorities', '-XX:ThreadPriorityPolicy=666']
-    10.times { priority ->
-      config.threadArgs << "-XX:JavaPriority${priority + 1}_To_OSPriority=${9 - priority}"
-    }
+    config.memArgs = ['-Xms64m']
+
     config.debugArgs = ['-Xdebug', '-Xnoagent', '-Djava.compiler=NONE', "-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=$debugPort"]
     config.systemProperties = [:]
     config.systemProperties['java.awt.headless'] = true
     config.systemProperties['file.encoding'] = 'UTF-8'
-    config.systemProperties['java.net.preferIPv4Stack'] = true
-    config.systemProperties['net.sf.ehcache.skipUpdateCheck'] = true
-    config.systemProperties['org.terracotta.quartz.skipUpdateCheck'] = true
-    config.systemProperties['console.port'] = consolePort
-    config.systemProperties['javax.jms.provider'] = 'activemq'
-    config.systemProperties['activemq.base'] = '/tmp/activemq-engine'
+//    config.systemProperties['java.net.preferIPv4Stack'] = true
 
     return config
 }
 
 def runtimeConfigs = [:]
-runtimeConfigs.engine = defineRuntimeConfig('run', 'com.accertify.autodecision.lifecycle.AutoDecisionEngine', 'ga', 9999, 45555)
+runtimeConfigs.engine = defineRuntimeConfig('run', 'com.mrose.embed.VelocityRun', 'ga', 9999, 45555)
 
 runtimeConfigs.values().each { config ->
     task("${config.name}", dependsOn: classes, type: JavaExec) {
         main = config.runClass
         classpath = sourceSets.main.runtimeClasspath
         maxHeapSize = config.maxHeapSize
-        jvmArgs config.hotspotArgs + config.memArgs + config.gcArgs + config.threadArgs
+        jvmArgs config.hotspotArgs + config.memArgs
         systemProperties config.systemProperties
         if (checkForRemoteDebug()) {
             jvmArgs config.debugArgs
